--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,10 +1,20 @@
-table, th, td {
-  border: 1px solid black;
+.wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column;
 }
-div{
-  margin-top: 15px;
-  margin-bottom: 15px;
+
+main {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: row;
 }
-.form{
-  margin-left: 15px;
+
+app-products {
+  flex-grow: 1;
+  margin: 2em 2em 4em;
 }
