--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,52 +1,9 @@
-<h1>{{title}}</h1>
-<table>
-  <thead>
-    <tr>
-      <td>Código</td>
-      <td>Descripción</td>
-      <td>Precio</td>
-      <td>Borrar</td>
-      <td>Seleccionar</td>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let articulo of articulos;">
-      <td>{{ articulo.codigo }}</td>
-      <td>{{ articulo.descripcion }}</td>
-      <td>{{ articulo.precio }}</td>
-      <td><button (click)="borrarArticulo(articulo.id)">Borrar</button></td>
-      <td><button (click)="selecArticulo(articulo.id)">Seleccionar</button></td>
-    </tr>
-  </tbody>
-</table>
-<form>
-  <div>
-    <label for="codigo">Código: </label>
-    <input type="number" name="codigo" id="codigo" [(ngModel)]="codigoInput" />
-  </div>
-  <div>
-    <label for="codigo">Descripción: </label>
-    <input
-      type="text"
-      name="descripcion"
-      id="descripcion"
-      [(ngModel)]="descripcionInput"
-    />
-  </div>
-
-  <div>
-    <label for="codigo">Precio: </label>
-    <input type="number" name="precio" id="precio" [(ngModel)]="precioInput" />
-  </div>
-
-  <button type="submit" class="form" (click)="agregarArticulo()">
-    Agregar
-  </button>
-  <button
-    *ngIf="Selected_Article"
-    class="form"
-    (click)="modificarArticulo( Selected_Article.id)"
-  >
-    Modificar
-  </button>
-</form>
+<div class="wrapper">
+  <header>
+    <app-nav (toggleMenu)="showSidenav = !showSidenav"></app-nav>
+  </header>
+  <main>
+    <app-sidenav [opened]="showSidenav"></app-sidenav>
+    <app-products></app-products>
+  </main>
+</div>
